[workspace.package]
authors = [
    "thenlevy <nicolaspierrelevy@gmail.com>",
    "Nicolas Schabanel <nicolas.schabanel@gmail.com>",
    "Joris Picot <joris.picot@ens-lyon.fr>",
    "Pacôme Perrotin <pacome.perrotin@gmail.com>",
    "Axel Brisse <axel.brisse@gmail.com>",
]
edition = "2024"
homepage = "https://www.ens-lyon.fr/ensnano/"
license = "GPL-3.0-or-later"
repository = "https://github.com/ensnano/ensnano"
version = "0.7.0"

[dependencies]
ahash = "0.8.6"
bytemuck = "1.2.0"
chebyshev_polynomials = { git = "https://github.com/thenlevy/chebyshev_polynomials" }
chrono = "0.4"
color_space = "0.5.2"
confy = { version = "1.0.0", default-features = false, features = [
    "yaml_conf",
] }
dirs = "4.0"
fontdue = "0.6.4"
futures = "0.3.5"
futures-channel = "0.3.30"
gltf = "0.16.0"
iced = { version = "0.12", features = ["advanced", "image", "svg"] }
iced_aw = { version = "0.9", default-features = false, features = [
    "tabs",
    "tab_bar",
] }
iced_graphics = "0.12"
iced_runtime = "0.12"
iced_wgpu = "0.12"
iced_winit = "0.12"
icondata = { version = "0.6", default-features = false, features = [
    "bootstrap-icons",
    "material-design-icons",
] }
image = "0.23"
int-enum = "1.0.1"
itertools = "0.10.3"
log = "0.4"
lyon = { git = "https://github.com/nical/lyon", rev = "ea6d904c6c9ec0445c5653c119a48c43ea76cee9" }
mathru = "0.13"
nom_stl = "0.2.2"
num = { version = "0.4", default-features = false }
num_enum = "0.5.1"
open = "1"
ordered-float = { version = "2.0", features = ["serde"] }
paste = "1.0.5"
pathdiff = "0.2.1"
png = "0.17.5"
pretty_env_logger = "0.4"
quadrature = "0.1.2"
rand = "0.8.5"
rand_distr = "0.4.0"
rapier3d = { version = "0.30.0", features = ["parallel", "simd-stable"] }
rayon = "1.6.0"
regex = "1.4.2"
relative-path = "1.7.0"
rfd = "0.15"
rust_xlsxwriter = "0.55.0"
serde = { version = "1.0.116", features = ["derive", "rc"] }
serde_json = "1.0.116"
serde_with = "1.11.0"
strum = { version = "0.26", features = ["derive"] }
svg = "0.12.0"
ultraviolet = { git = "https://github.com/termhn/ultraviolet", rev = "b2fb29e", features = [
    "bytemuck",
    "f64",
    "serde",
] }
version-compare = "0.1.0"
wgpu = { version = "0.19", features = ["spirv"] }
winit = "0.29"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[package]
authors.workspace = true
categories = ["graphics", "science", "simulation"]
description = "A 3D graphical application for DNA nanostructures"
edition.workspace = true
keywords = ["dna", "ensnano", "nanostructures"]
homepage.workspace = true
license.workspace = true
name = "ensnano"
repository.workspace = true
readme = "README.md"
resolver = "2"
version.workspace = true

[features]
log_after_renderer_setup = []
dx12_only = []

[lints.rust]
closure_returning_async_block = "warn"
deref_into_dyn_supertrait = "warn"
explicit_outlives_requirements = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_docs = "allow" # TODO: warn (major undertaking)
missing_unsafe_on_extern = "warn"

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# cargo
blanket_clippy_restriction_lints = "allow"
multiple_crate_versions = "allow"

# nursery
missing_const_for_fn = "allow" # TODO: warn
suboptimal_flops = "allow"

# pedantic
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"
doc_markdown = "allow" # TODO: warn
if_not_else = "allow"
needless_pass_by_value = "allow" # TODO: warn
option_option = "allow"
unused_self = "allow" # TODO: warn (weird that we have 64 occurrences)
similar_names = "allow"

# restriction
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow" # TODO: warn (requires some thought and configuration)
arithmetic_side_effects = "allow"
as_conversions = "allow"
cast_precision_loss = "allow"
clone_on_ref_ptr = "allow" # TODO: warn (too much manual work for now)
default_numeric_fallback = "allow"
else_if_without_else = "allow"
expect_used = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
impl_trait_in_params = "allow"
indexing_slicing = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "allow"
let_underscore_untyped = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow" # TODO: warn (major undertaking)
missing_trait_methods = "allow"
mod_module_files = "allow"
module_name_repetitions = "allow"
non_ascii_literal = "allow"
multiple_inherent_impl = "allow" # TODO: warn once clippy 1.92 gets out
pattern_type_mismatch = "allow"
partial_pub_fields = "allow"
pathbuf_init_then_push = "allow"
precedence_bits = "allow"
print_stdout = "allow" # TODO: warn and use log! everywhere
pub_with_shorthand = "allow"
question_mark_used = "allow"
same_name_method = "allow" # TODO: warn once single-impl traits are removed
semicolon_outside_block = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unreachable = "allow"
unseparated_literal_suffix = "allow"
unwrap_used = "allow"
use_debug = "allow" # TODO: warn once log! is used everywhere instead of println!

# suspicious
arc_with_non_send_sync = "allow" # TODO: warn (requires understand the multiplexer)

# =============
# = TEMPORARY =
# =============
# [lints.clippy]
# cargo = { level = "allow", priority = -1 }
# complexity = { level = "allow", priority = -1 }
# correctness = { level = "allow", priority = -1 }
# nursery = { level = "allow", priority = -1 }
# pedantic = { level = "allow", priority = -1 }
# perf = { level = "allow", priority = -1 }
# restriction = { level = "allow", priority = -1 }
# style = { level = "allow", priority = -1 }
# suspicious = { level = "allow", priority = -1 }
# explicit_iter_loop = "deny"
