
[package]
name = "ensnano_design"
version = "0.7.0"
authors = [
    "thenlevy <nicolaspierrelevy@gmail.com>",
    "Nicolas Schabanel <nicolas.schabanel@gmail.com>",
]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
ensnano_organizer.workspace = true

chebyshev_polynomials.workspace = true
icondata.workspace = true
log.workspace = true
num_enum.workspace = true
ordered-float.workspace = true
pathdiff.workspace = true
quadrature.workspace = true
rayon.workspace = true
rand.workspace = true
rand_distr.workspace = true
regex.workspace = true
relative-path.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde-hex.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
svg.workspace = true
ultraviolet.workspace = true
version-compare.workspace = true
