[package]
name = "ensnano_exports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ensnano_design.workspace = true

ahash.workspace = true
itertools.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
