[package]
name = "ensnano_exports"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ensnano_design.workspace = true

ahash.workspace = true
itertools.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
ultraviolet.workspace = true
