[package]
name = "ensnano_flatscene"
version = "0.4.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
ensnano_design.workspace = true
ensnano_interactor.workspace = true
ensnano_utils.workspace = true

ahash.workspace = true
bytemuck.workspace = true
color_space.workspace = true
futures.workspace = true
futures-channel.workspace = true
log.workspace = true
lyon.workspace = true
png.workspace = true
