[package]
name = "ensnano_flatscene"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ensnano_consts.workspace = true
ensnano_design.workspace = true
ensnano_utils.workspace = true

ahash.workspace = true
bytemuck.workspace = true
color_space.workspace = true
fontdue.workspace = true
futures.workspace = true
futures-channel.workspace = true
itertools.workspace = true
log.workspace = true
lyon.workspace = true
png.workspace = true
ultraviolet.workspace = true
wgpu.workspace = true
winit.workspace = true
