[package]
name = "ensnano_gui"
version = "0.4.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
ensnano_design.workspace = true
ensnano_exports.workspace = true
ensnano_iced.workspace = true
ensnano_interactor.workspace = true
ensnano_organizer.workspace = true
ensnano_utils.workspace = true

color_space.workspace = true
futures.workspace = true
log.workspace = true
open.workspace = true
paste.workspace = true
rfd.workspace = true
