[package]
name = "ensnano_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ensnano_design.workspace = true
ensnano_exports.workspace = true
ensnano_iced.workspace = true
ensnano_interactor.workspace = true
ensnano_organizer.workspace = true
ensnano_utils.workspace = true

color_space.workspace = true
futures.workspace = true
log.workspace = true
open.workspace = true
paste.workspace = true
rfd.workspace = true
ultraviolet.workspace = true
