[package]
name = "ensnano_iced"
version = "0.7.0"
authors = ["Joris Picot <joris.picot@ens-lyon.fr"]
license = "GPL-3.0-or-later"
edition = "2024"
resolver = "2"

[dependencies]
color_space.workspace = true
iced.workspace = true
iced_aw.workspace = true
iced_futures.workspace = true
iced_graphics.workspace = true
iced_runtime.workspace = true
iced_wgpu.workspace = true
iced_widget.workspace = true
iced_winit.workspace = true
icondata.workspace = true
log.workspace = true
serde.workspace = true
