[package]
name = "ensnano_iced"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
color_space.workspace = true
iced.workspace = true
iced_aw.workspace = true
iced_futures.workspace = true
iced_graphics.workspace = true
iced_runtime.workspace = true
iced_wgpu.workspace = true
iced_widget.workspace = true
iced_winit.workspace = true
icondata.workspace = true
log.workspace = true
serde.workspace = true
