[package]
name = "ensnano_iced"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
color_space.workspace = true
iced.workspace = true
iced_graphics.workspace = true
iced_wgpu.workspace = true
log.workspace = true
