[package]
name = "ensnano_interactor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ensnano_consts.workspace = true
ensnano_design.workspace = true
ensnano_organizer.workspace = true

bytemuck.workspace = true
chrono.workspace = true
fontdue.workspace = true
log.workspace = true
num.workspace = true
rayon.workspace = true
serde.workspace = true
ultraviolet.workspace = true
wgpu.workspace = true
winit.workspace = true
