[package]
name = "ensnano_organizer"
version = "0.7.0"
authors = ["nlevy <nicolaspierrelevy@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ensnano_iced.workspace = true

icondata.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
