[package]
name = "ensnano_organizer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ensnano_iced.workspace = true

icondata.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
