[package]
name = "ensnano_organizer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
iced.workspace = true
iced_graphics.workspace = true
icondata.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
