[package]
name = "ensnano_physics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ensnano_design.workspace = true
ensnano_interactor.workspace = true

ahash.workspace = true
itertools.workspace = true
rapier3d.workspace = true
ultraviolet.workspace = true
