[package]
name = "ensnano_scene"
version = "0.4.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
ensnano_design = { path = "../ensnano-design" }
ensnano_interactor = { path = "../ensnano-interactor" }
ensnano_utils = { path = "../ensnano-utils" }

bytemuck = "1.2.0"
futures = "0.3.5"
futures-channel = "0.3.30"
image = "0.23"
int-enum = "1.0.1"
log = "0.4"
lyon = { git = "https://github.com/nical/lyon", rev = "ea6d904c6c9ec0445c5653c119a48c43ea76cee9" }
num_enum = "0.5.1"
png = "0.17.5"
serde_json = { version = "1.0.116" }
