[package]
name = "ensnano_scene"
version = "0.7.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
ensnano_design.workspace = true
ensnano_interactor.workspace = true
ensnano_utils.workspace = true

bytemuck.workspace = true
futures.workspace = true
futures-channel.workspace = true
image.workspace = true
int-enum.workspace = true
log.workspace = true
lyon.workspace = true
num_enum.workspace = true
png.workspace = true
serde_json.workspace = true
