[package]
name = "ensnano_scene"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ensnano_design.workspace = true
ensnano_interactor.workspace = true
ensnano_utils.workspace = true

bytemuck.workspace = true
futures.workspace = true
futures-channel.workspace = true
image.workspace = true
int-enum.workspace = true
log.workspace = true
lyon.workspace = true
num_enum.workspace = true
png.workspace = true
serde_json.workspace = true
ultraviolet.workspace = true
wgpu.workspace = true
winit.workspace = true
