[package]
name = "ensnano_state"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ensnano_design.workspace = true
ensnano_exports.workspace = true
ensnano_physics.workspace = true
ensnano_utils.workspace = true

ahash.workspace = true
iced.workspace = true
log.workspace = true
serde.workspace = true
ultraviolet.workspace = true
winit.workspace = true
wgpu.workspace = true
