[package]
name = "ensnano_state"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ensnano_design.workspace = true
ensnano_exports.workspace = true
ensnano_physics.workspace = true
ensnano_utils.workspace = true

ahash.workspace = true
color_space.workspace = true
iced.workspace = true
log.workspace = true
mathru.workspace = true
regex.workspace = true
serde.workspace = true
ultraviolet.workspace = true
winit.workspace = true
wgpu.workspace = true
ordered-float.workspace = true
rand.workspace = true
rand_distr.workspace = true
version-compare.workspace = true
serde_json.workspace = true
itertools.workspace = true
rust_xlsxwriter.workspace = true
confy.workspace = true
iced_wgpu.workspace = true
dirs.workspace = true
