[package]
name = "ensnano_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ensnano_consts.workspace = true
ensnano_interactor.workspace = true # TODO: remove (only used for PhySize)

ahash.workspace = true
bytemuck.workspace = true
color_space.workspace = true
gltf.workspace = true
log.workspace = true
nom_stl.workspace = true
rand.workspace = true
serde.workspace = true
ultraviolet.workspace = true
wgpu.workspace = true
winit.workspace = true
