[package]
name = "ensnano_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ensnano_consts.workspace = true

bytemuck.workspace = true
color_space.workspace = true
rand.workspace = true
ultraviolet.workspace = true
wgpu.workspace = true
winit.workspace = true
