[package]
name = "ensnano_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ensnano_design.workspace = true

bytemuck.workspace = true
chrono.workspace = true
color_space.workspace = true
fontdue.workspace = true
gltf.workspace = true
log.workspace = true
nom_stl.workspace = true
num.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
ultraviolet.workspace = true
wgpu.workspace = true
winit.workspace = true
